Fixed height on safari ios

--- a/src/index.less
+++ b/src/index.less
@@ -8,6 +8,7 @@ body {
   background: transparent;
   overflow: hidden;
   font-family: Fuji;
+  height: 100%;
 }
 
 h1  {
@@ -22,6 +23,7 @@ h2 {
 
 #AppContainer {
   overflow: hidden;
+  height: 100%;
 }
 
 
